# building-tools-demand-forecasting

./: .gitignore  Dockerfile  README.md  building_supply_store_sales_2020-2024.csv  config.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: branch_store.csv  cashiers.csv  price_list.csv
reports/: automl_cv_results.csv  drift_report.csv  holdout_predictions.csv  metrics.json  monitoring_report.json  monitoring_summary.md  Фамилия_Имя_ML_прогнозирование_спроса_инструменты.pptx
scripts/: create_presentation.py
src/demand_forecasting/: __init__.py  cli.py  config.py  data.py  metrics.py  model.py  monitor.py  predict.py  train.py  visualize.py
tests/: test_data_pipeline.py  test_metrics.py  test_model.py
