[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "student-demand-forecasting-tools"
version = "0.1.0"
description = "Automated ML pipeline for demand forecasting in a building supply store"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "joblib>=1.3",
  "PyYAML>=6.0",
  "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
demand-pipeline = "demand_forecasting.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
